add pydocstyle to dev pipfile

--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,7 @@ isort = "*"
 ipython = "*"
 "autopep8" = "*"
 python-language-server = {extras = ["all"],version = "*"}
+pydocstyle = "*"
 
 [requires]
 python_version = "3.6.6"
