--- a/Pipfile
+++ b/Pipfile
@@ -16,7 +16,7 @@ urllib3 = ">=1.26.5"
 "flake8" = "*"
 pytest = "*"
 isort = "*"
-ipython = "*"
+ipython = ">=7.16.3"
 "autopep8" = "*"
 pydocstyle = "*"
 
