--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,7 @@ name = "pypi"
 pandas = "*"
 tweepy = "<4"
 pyyaml = "<6"
-sqlalchemy = "*"
+sqlalchemy = "<2"
 pymysql = "*"
 argparse = "*"
 urllib3 = ">=1.26.5"
@@ -21,4 +21,4 @@ ipython = ">=7.16.3"
 pydocstyle = "*"
 
 [requires]
-python_version = "3.8.2"
+python_version = ">=3.8"
